# inky-c

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  example_eeprom.c
includes/: error_handlers.h
src/: eeprom.h  main.c
test/: CMakeLists.txt  eeprom_test.cpp
